--- a/restClients/MyAngularApp/src/index.html
+++ b/restClients/MyAngularApp/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: #abd2e6;">
 <head>
   <meta charset="utf-8">
   <title>MyAngularApp</title>
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root style="clear:both"></app-root>
 </body>
 </html>
